--- a/build.gradle
+++ b/build.gradle
@@ -36,11 +36,27 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.amqp:spring-rabbit-stream'
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    testImplementation 'io.projectreactor:reactor-test'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
 //    developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
 //    runtimeOnly 'io.micrometer:micrometer-registry-influx'
     implementation 'com.google.firebase:firebase-admin:9.2.0'
+
+    // map struct
+//    implementation 'org.mapstruct:mapstruct:1.5.3.Final'
+//    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
+//    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
+
+    // jackson
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.18.0'
+
+    // httpclient 5
+    implementation group: 'org.apache.httpcomponents.client5', name: 'httpclient5', version: '5.4'
+    implementation group: 'org.apache.httpcomponents.core5', name: 'httpcore5', version: '5.3'
+    implementation group: 'org.apache.httpcomponents.core5', name: 'httpcore5-h2', version: '5.3'
+
     runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
