chore: observability를 위한 tempo, prometheus, loki 설정 추가
opentelemtry-javaagent를 통해 trace 정보를 tempo에 전달

prometheus에 metric 정보를 노출하기 위한 의존성 및 docker port 추가

loki로 로그 전송은 docker plugin을 사용

--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,14 @@ dependencies {
     implementation group: 'org.apache.httpcomponents.core5', name: 'httpcore5', version: '5.3'
     implementation group: 'org.apache.httpcomponents.core5', name: 'httpcore5-h2', version: '5.3'
 
+    // prometheus
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
+
+    // prometheus exemplar
+    // https://mvnrepository.com/artifact/io.prometheus/simpleclient_common
+    implementation 'io.prometheus:simpleclient_common:0.16.0'
+
     runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
